# worldcup

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
examples/: world_cup_2022.json
models/: xgb_worldcup.joblib
notebooks/: goal_heatmap.ipynb
src/: __init__.py  cli.py  config.py  data.py  elo.py  features.py  plots.py  predict.py  simulate.py  train.py
tests/: test_app.py  test_goal_heatmap.py  test_no_leakage.py  test_train.py
