[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "worldcup"
version = "0.1.0"
description = "Soccer game prediction using XGBoost"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "shap>=0.46",
  "streamlit>=1.35",
  "xgboost>=2.0",
]

[project.scripts]
worldcup = "src.cli:main"

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "ipywidgets>=8.1.8",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
